--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -71,18 +71,18 @@
 
 
     <!-- SHOPPINC CART -->
-    <div id="shopping-cart-div" style="display: block">
-            <table  class="styled-table" style="width:100%">
-                <caption style="lighting-color: #04aa6d">CART</caption>
-                <thead>
-                <tr>
-                    <th colspan="2" scope="col">Product name</th>
-                    <th scope="col">Product Description</th>
-                    <th scope="col">Category</th>
-                    <th scope="col">Cost</th>
-                    <th scope="col">How many</th>
-                </tr>
-                </thead>
+    <div id="shopping-cart-div-old" style="display: block">
+        <table class="styled-table" style="width:100%">
+            <caption style="lighting-color: #04aa6d">CART</caption>
+            <thead>
+            <tr>
+                <th colspan="2" scope="col">Product name</th>
+                <th scope="col">Product Description</th>
+                <th scope="col">Category</th>
+                <th scope="col">Cost</th>
+                <th scope="col">How many</th>
+            </tr>
+            </thead>
                 <tbody th:each="supplierId : ${session.shoppingCart.shoppingCartMap.keySet()}" th:with="supplierInfo=${session.shoppingCart.shoppingCartMap.get(supplierId)[0].supplier}" >
 
                 <tr th:each="product : ${session.shoppingCart.shoppingCartMap.get(supplierId)}" >
@@ -104,7 +104,7 @@
                     <td th:if="${ totalamount < supplierInfo.freeShippingMinAmount && supplierInfo.hasFreeShipping}">Free shipping on<span th:text="${supplierInfo.supplierName}">Suppl1</span>: &euro;<span th:text="${#numbers.formatDecimal(supplierInfo.freeShippingMinAmount, 1, 2, 'COMMA')}">10.00</span></td>
 
                     <td th:if="${ totalamount >= supplierInfo.freeShippingMinAmount && supplierInfo.hasFreeShipping}" th:text="'You\'re getting free shipping'"> Spesa minima per spedizione gratuita </td>
-                    <td>
+                    <td colspan="6">
                         <form  th:action="${#request.contextPath} + '/PlaceOrder'" method="POST">
                             <label th:for="addreesId">Select an address
                                 <select th:name="userShippingAddressId">
@@ -123,6 +123,10 @@
 
                 </tbody>
             </table>
+        <div id="shopping-cart-div-message-old"> Prodotto aggiunto nel carrello con successo</div>
+    </div>
+
+    <div id="shopping-cart-div" style="display: none">
         <div id="shopping-cart-div-message"> Prodotto aggiunto nel carrello con successo</div>
     </div>
 
