--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -18,7 +18,7 @@
 
     <header>
         <div>
-            <a id="homepage-link-logo" href="/GoToHome" class="logo">
+            <a id="homepage-link-logo" href="#" class="logo">
                 <img src="images/website-logo.png" alt="website-logo.png"/>
             </a>
         </div>
